--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 form {
-  max-width: 400px;
+  max-width: 800px;
   margin: 20px auto;
   padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 
 label {
   display: block;
