--- a/src/Composants/Menu.css
+++ b/src/Composants/Menu.css
@@ -1,34 +1,57 @@
-.nav{
-    width: 283px;
-    height: 100%;
-    background-color: #152259;
-    position:fixed;
-    left: 0px;
-    top:0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* Custom styles for the sidenav */
+#sidenav {
+  height: 100vh;
+  background-color: #152259;
+  color: white;
+  z-index: 50;
+}
+
+
+#sidenav .btns {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  margin: 5px 0;
+}
+
+#sidenav .btns img {
+  width: 30px;
+  height: 30px;
+  margin: 0px 20px;
+}
+
+/* Responsive styles */
+@media (max-width: 767.98px) {
+  #sidenav {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #343a40;
+      transition: left 0.3s;
   }
-  
-  .nav img{
-    width:120px;
-    margin-top: 40px;
+  #sidenav.active {
+      left: 0;
   }
-  .nav hr{
-    width:100%;
-    margin-top: 50px;
+  main {
+      margin-left: 0 !important;
   }
-  
-  .btns{
-    display: flex;
-    height: 40px;
-    border-radius: 10px;
-    margin-top: 20px;
+}
+
+.navbar-toggler {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+}
+
+@media (min-width: 768px) {
+  .navbar-toggler {
+      display: none;
   }
-  
-  .btns img{
-    width: 30px;
-    height: 30px;
-    margin-top: -8px;
-    margin-right: 15px;
-  }
+}
